fixed sidebar styling z-index

--- a/src/App1.css
+++ b/src/App1.css
@@ -532,7 +532,6 @@ header {
     border-radius: 10px;
     margin-bottom: 20px;
     padding-bottom: 20px;
-
     width: 100%;
     overflow: scroll;
 }
@@ -696,10 +695,12 @@ header {
     .sidebar {
       width: 50%; /* Full width for small screens */
       left: -100%; /* Hide sidebar by default on small screens */
+      z-index: 1;
     }
   
     .sidebar.active {
       left: 0; /* Show sidebar when active on small screens */
+      
     }
     .single-article-img {
         height: 30%;
@@ -714,6 +715,7 @@ header {
         height: fit-content;
         width: 100%;
         overflow:visible;
+        z-index: 9;
         
     }
   }
